fixed spacing in home and contact for mobile

--- a/src/Components/css/Contact.css
+++ b/src/Components/css/Contact.css
@@ -7,5 +7,6 @@
 
   #submit-message {
     text-align: center;
+    margin-top: 10px;
   }
 }
