--- a/src/Components/css/Home.css
+++ b/src/Components/css/Home.css
@@ -15,6 +15,10 @@
   }
   .desc {
     width: 100% !important;
+    margin-top: 25px;
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   li {
     display: list-item;
